fixed contrast errors

--- a/CSS-week1-HW1/css/style.css
+++ b/CSS-week1-HW1/css/style.css
@@ -12,6 +12,10 @@ nav
   background-color: #34495e;
 }
 
+nav a {
+  color: #ffffff;
+}
+
 main 
 {
   background-color: #f4f4f4;
@@ -21,6 +25,10 @@ main
 footer
  {
   background-color: #2c3e50;
+}
+
+footer a {
+  color: #ffffff;
 }
 
 li 
@@ -35,7 +43,7 @@ h1
 {
   text-align: center;
   font-family: Georgia, serif;
-  color: #2c3e50;
+  color: #ffffff;
 }
 
 p 
